fix bug - hide overflow-x on body

--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    overflow-x: hidden;
+}
 .container {
     margin: 0 auto;
     max-width: 1170px;
